# MegaSchool

./: IMPLEMENTATION_PLAN.md  PROJECT_STRUCTURE.md  Архитектура.md
diagram-service/: .env.example  .gitignore  GIT_SETUP.md  IMPLEMENTATION_STATUS.md  METRICS.md  PRESENTATION_SPEECH.md  QUICK_START.md  README.md  STATUS.md  diagram_examples.json  generate_diagram_images.py  pyproject.toml
diagram-service/docker/: Dockerfile  Dockerfile.gpu  docker-compose.gpu.yml  docker-compose.yml
diagram-service/docs/: API.md  DEPLOYMENT.md
diagram-service/models/: README.md
diagram-service/scripts/: download_models.py  test_service.py
diagram-service/src/api/: main.py
diagram-service/src/api/models/: requests.py  responses.py
diagram-service/src/api/routes/: analyze.py  generate.py  mock_data.py
diagram-service/src/core/: config.py  exceptions.py  logger.py
diagram-service/src/generative_pipeline/: code_generator.py  text_parser.py  visualizer.py
diagram-service/src/ml_pipeline/: detector.py  graph_constructor.py  ocr.py  semantic_interpreter.py
diagram-service/src/postprocessing/: formatter.py  template_engine.py
diagram-service/src/preprocessing/: image_preprocessor.py  text_preprocessor.py
diagram-service/src/utils/: graph_utils.py  image_utils.py
diagram-service/static/: index.html
diagram-service/templates/: algorithm_description.j2
